--- a/cryo.tex
+++ b/cryo.tex
@@ -8,23 +8,23 @@
 DUNE-PT will use a membrane tank technology supported by an outer steel structure.
 
 The minimum internal size of the cryostat is determined by the size of the TPC.  At the bottom of the 
-cryostat there needs to be a minimum of 0.36 m between the frame of the CPA and the closest point on the stainless steel 
+cryostat there needs to be a minimum of 0.36~m between the frame of the CPA and the closest point on the stainless steel 
 membrane.  This is to prevent high voltage discharge between the CPA and the electrically grounded 
 membrane. It is foreseen that there would be some cryogenic piping and instrumentation under the TPC.  
-There is a height allowance of 0.165 m for this.  There will be access and egress space around the outside 
-of the TPC and the membrane walls.  On two sides, 0.15 m of space is reserved for this. The front will have 0.36 mm and the back, where piping and instrumentation for the cryogenic system will be located, 1.20 m.
+There is a height allowance of 0.165~m for this.  There will be access and egress space around the outside 
+of the TPC and the membrane walls.  On two sides, 0.15~m of space is reserved for this. The front will have 0.36~m and the back, where piping and instrumentation for the cryogenic system will be located, 1.20~m.
 
 The support system for the TPC will be located outside the cryostat roof, with a bridge connected to the floor. 
-It is the same design solution currently foreseen for the DUNE single phase TPC in the LBNF cryostat.  
-The plan is to model this space similar to what is planned for the far site TPC.  There 
+%It is a design solution currently foreseen for the DUNE single phase TPC in the LBNF cryostat.  
+The plan is to model the space similar to what is planned for the far site TPC.  There 
 will be 0.82 m of ullage space.  In order to prevent high voltage discharge, the upper most part of the CPA 
 needs to be submerged a minimum of 0.5 m below the liquid argon surface.  The top of the TPC will be 
 separated from the membrane by a minimum of 1.1 m.  
 
 Adding all of these to the size of the TPC yields the minimum inner dimensions of the cryostat.  A 
-minimally-sized cryostat would be 8.9~m long, 7.8~m wide and 8.1~m high.  This assumes the TPC will be 
+minimally-sized cryostat would have inner dimensions of 8.9~m (length), 7.8~m (width) and 8.1~m (height).  This assumes the TPC will be 
 positioned inside the cryostat with the CPAs and end field cages parallel to the walls of the cryostat. 
-Figure~\ref{fig:fardet-overview} shows a 3D view of the detector inside the cryostat and Figure~\ref{fig:cryostat-views} shows side and end views of the cryostat, respectively. 
+Figure~\ref{fig:CERNdet-overview} shows a 3D view of the detector inside the cryostat and Figure~\ref{fig:cryostat-views} shows side and end views of the cryostat, respectively. 
 %
 \begin{figure}
 \begin{center}
@@ -45,7 +45,7 @@ The cryostat has an inner volume of 483 m$^3$ and can contain  673 t of LAr.
 %% (this is a comment) add \cite{montanari_sbn_perf} if public access in docdb 9270 (AH)
 %and the Fermilab Short-Baseline Near Detector\cite{acciarri_sbn_proposal}.  
 %
-The cryostat will use a steel outer supporting structure with a metal liner inside to isolate the insulation volume, similar to the one of the dual phase WA105 detector, the $1\times1\times3$~m$^3$ prototype and to the Fermilab Short-Baseline Near Detector. 
+The cryostat will use a steel outer supporting structure with a metal liner inside to isolate the insulation volume, similar to the one of the dual phase WA105 detector, the $1\times1\times3$~m$^3$ prototype and to the Fermilab Short-Baseline Near Detector \cite{sbnd}. 
 The support structure will rest on I-beams to allow for air circulation underneath in order to maintain the temperature within the allowable limits. The proposed design encompasses the following components:
 %
 \begin{itemize}
@@ -68,7 +68,7 @@ Two membrane cryostat vendors are known: GTT (Gaztransport \& Technigaz) from Fr
 \end{figure}
 
 To minimize the contamination from warm surfaces, during operation the temperature of all surfaces in the ullage shall be lower than 100~K. 
-It has been observed in the Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD) at Fermilab that the outgassing is significantly reduced below 100~K \cite{outgassing}. A possible way to achieve this requirement is to spray a mist of clean liquid and gaseous argon to the metal surfaces in the ullage and keep them cold, similar to the strategy that was developed for the cool down of the LBNE 35 t prototype.
+It has been observed in the Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD) at Fermilab that the outgassing is significantly reduced below 100~K \cite{outgassing}. A possible way to achieve this requirement is to spray a mist of clean liquid and gaseous argon to the metal surfaces in the ullage and keep them cold, similar to the strategy that was developed for the cool down of the 35~t prototype.
 
 The top plate will contain two hatches for the installation of the TPCs; it will also contain a manhole to enter the tank after closing the hatches, and several penetrations for the cryogenic system and the detector. 
 
@@ -212,7 +212,7 @@ for the active beam configuration will be covered by exterior flanges
 for safety.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\textbf{Cryostat grounding and isolation requirements:}
+\textbf{Cryostat grounding and isolation requirements:}\\
 %
 The cryostat has to be grounded and electrically isolated from the building. 
 Figure~\ref{fig:top-plate-gnd} shows the layout of the top plate grounding.
@@ -221,7 +221,7 @@ We list the grounding and isolation requirements for the cryostat.
 \begin{enumerate}
 \item \textbf{Isolation}
 	\begin{enumerate}
-	\item The cryostat membrane and any supporting structure, whether it is a steel structure or a concrete and rebar pour, shall be isolated from any building metal or building rebar with a DC impedance greater than 300 k$\Omega$.
+	\item The cryostat membrane and the steel supporting structure shall be isolated from any building metal or building rebar with a DC impedance greater than 300 k$\Omega$.
 	\item All conductive piping penetrations through the cryostat shall have dielectric breaks prior to entering the cryostat and the top plate.
 	\end{enumerate}
 
@@ -262,7 +262,7 @@ removed, the weld fixed and the test is performed another time. Any and all leak
 test lasts a minimum of 20 hours and is sensitive enough to detect defects down to 0.003 mm in size 
 and to a 10$^{-7}$ std-cm$^3/s$ leak rate (equivalent leak rate at standard pressure and temperature, 1 bar and 
 273 K). To prevent infiltration of water vapor or oxygen through microscopic membrane leaks (below 
-detection level) the insulation spaces will be continuously purged with gaseous argon to provide one 
+detection level) the insulation spaces will be continuously purged with gaseous nitrogen to provide one 
 volume exchange per day. The insulation space will be maintained at 70 mbar, slightly above 
 atmospheric pressure. This space will be monitored for changes that might indicate a leak from the 
 primary membrane. Pressure control devices and safety relief valves will be installed on the insulation 
@@ -291,7 +291,7 @@ From the dewar storage the LN2 is then transferred to a distribution facility lo
 hall. It includes a small buffer volume and an LN2 pumping station that transfers the LN2 to the argon 
 condenser and other services as needed. The low estimated heat leak of the vessel ($\sim$3.2~kW) and the 
 location inside an above ground building allow for use of an open loop system typical of other 
-installations operated at Fermilab (LAPD, LBNE 35~t prototype, MicroBooNE) and at CERN. 
+installations operated at Fermilab (LAPD, 35~t prototype, MicroBooNE) and at CERN. 
 The main goal of the LN2 system is to provide cooling power for the argon condenser, the initial cool down of 
 the vessel and the detector, and all other services as needed.
 %
@@ -323,7 +323,7 @@ Nominal LAr purification flow rate (filling/ops) & 5.5 day/volume exchange \\ \h
 
 
 Figure~\ref{fig:proposed-LAr-system} shows a schematic diagram of the proposed liquid argon system. It is based on the design of the 
-LBNE 35 t prototype, the MicroBooNE detector systems and the plans for the DUNE Far Detector.
+ 35~t prototype, the MicroBooNE detector systems and the plans for the DUNE Far Detector.
 \begin{figure}
 \begin{center}
 \includegraphics[width=1.0\textwidth]{figures/proposed-LAr-system} 
@@ -331,7 +331,7 @@ LBNE 35 t prototype, the MicroBooNE detector systems and the plans for the DUNE 
 \end{center}
 \end{figure}
 The main goal of the LAr system is to purge the cryostat prior to the start of the operations (with GAr in open 
-and closed loop), cool down the cryostat and fill it with LAr. Then continuously purify the LAr and the boil 
+and closed loop), cool down the cryostat and fill it with LAr. The next step is to continuously purify the LAr and the boil 
 off GAr to maintain the required purity which is measured by the detector in the form of an electron drift time measurement.
 
 The LAr receiving facility includes a storage dewar and an ambient vaporizer to deliver LAr and GAr to the 
