--- a/calibration.tex
+++ b/calibration.tex
@@ -41,8 +41,8 @@ The gas purity analyzers for oxygen and H$_{2}$O are commercially available. The
 Liquid purity monitors are small size TPCs with light sources that generate electrons via photoelectric effect and electronics to read out the amount of electrons in the cathode plane and anode plane. The electron lifetime can be derived by comparing the number of surviving electrons with those generated. The electron lifetime is a direct estimator of the argon purity.
 Multiple liquid purity monitors will be installed at a variety of locations (close to and far from the recirculation inlet) and at different heights.
 
-The temperature of liquid argon varies as a function of the pressure of the detector by a little less than 1~K/psi. It therefore also varies 
-as function of height in the liquid. Silicon diode sensors with accuracy as little as $\sim$ 20 mK will be installed at multiple locations in the detector.
+The temperature of liquid argon varies as a function of the pressure of the detector by a little less than 1~K/psi.  
+Silicon diode sensors with accuracy as little as $\sim$ 20 mK will be installed at multiple locations in the detector.
 
 To measure and calibrate electric field, purity, electron lifetime and drift speed in-situ, a laser system and a muon detector are foreseen. 
 Both systems, each with particular pros and cons, use ionization-particle paths to measure the above quantities.\\
@@ -60,7 +60,7 @@ beam to pass to the inside of the TPC. Position detection systems such as SiPMs 
 to measure the position of the laser beam.
 
 The {\bf cosmic muon detector} system serves as an alternative tool to the laser calibration system. Cosmic rays with energies of a few GeV 
-have nearly uniform dE/dx in liquid argon with about 2~MeV/cm and generate about 18,000 electrons. % in the 3 mm wire space. 
+have nearly uniform dE/dx in liquid argon with about 2~MeV/cm and generate about 18,000 electrons/cm. % in the 3 mm wire space. 
 Given standard values quoted for the cosmic ray muon flux at sea level, we arrive at a number of roughly 200 incident muons per square meters per second.  Taking into account the dimensions of the TPC, we estimate the area of the top face of its rectangular volume to be just over 50~m$^{2}$, which means that the detector will be subject to $\sim10^{4}$ particles per second.  The full electron drift time in liquid argon for a 3.6~m drift length is 2.25~ms, and each readout window for an event will contain three drift time windows which will include data from drift windows before and after the event.  Based on the cosmic rate and the size of the readout window, there is expected to be on average $\sim$68 track segments on top of the actual beam event.  This estimate takes into account the readout of charge that may still be drifting from the window just prior to the triggered one and the loss of charge that is still drifting after the triggered window ends.    Muon detectors are planned to be installed to preferentially measure cosmic rays passing nearly horizontally through the cryostat.
 Additional muon counters on top of the cryostat will allow tagging of highly inclined muons and veto of vertical muons. 
   A disadvantage of using muons as a calibration tool compared to a laser beam is that muons could scatter multiple times in passing 
