--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -2,7 +2,13 @@
 \subsection{Particle beam requirements}
 The requested beam parameters are driven by the requirement that the results from the CERN test beam should be directly applicable to the future large underground single-phase LAr detector with minimal extrapolation. The CERN test beam data will be used to evaluate the detector performance, to understand the various physics systematic effects, and to provide ``neutrino-like'' data for event reconstruction studies. To satisfy the requirement, the beam parameters must span a broad range of particle spectrum that are expected in the future neutrino experiment. The particle beam composition should consist of electrons, muons, and hadron beams that are charge-selected. The expected momentum distributions for secondary particles from neutrino interactions are shown in Figure~\ref{fig:particle_momenta}. There is a large spread in the momentum distribution with most particles peaked near 200 MeV/c. To cover the momentum range of interest, the momentum of the test beam should step from 0.2 GeV/c up to 10 GeV/c. 
 
-The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile-up in the TPC, the planned beam rate should be around 200 Hz.  Since the single-phase TPC consists of two drift volumes, it is desirable to aim the particle beam so that the hadronic showers are mostly contained in the same drift volume.  The nominal plan is to have the beam enter the cryostat slightly downward at an angle of about 6 degrees. This angle will roughly match the angle at which the neutrino beam enters the liquid argon cryostat at the far detector for the DUNE experiment. Along the horizontal plane, the beam should enter the cryostat with an angle of about 10 degrees to avoid pointing the beam perpendicular to the electron drift in the TPC.  We also plan to take some data with the beam entering a different region of the TPC, and may include some data with particles crossing one drift volume to the next.  The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
+The maximum electron drift time in the TPC is about 2.2 ms. In order to minimize pile-up in the TPC, the planned beam rate should be around 200 Hz.  The DUNE-PT has two drift volumes separated by a passive cathode plane.
+It is desirable to aim the particle beam such that a large fraction of the lower energy hadronic showers are mostly contained in one drift 
+volume to minimize uncertainties due to the passing of inactive detector materials.
+
+The nominal plan is to have the beam enter the cryostat slightly downward at an angle of about 6 degrees. This angle will roughly match the angle at which the neutrino beam enters the liquid argon cryostat at the far detector for the DUNE experiment. Along the horizontal plane, the beam should enter the cryostat with an angle of about 10 degrees to avoid pointing the beam perpendicular to the electron drift in the TPC.  
+Events with the latter orientation would introduce larger reconstruction ambiguities. 
+We also plan to take some data with the beam entering a different region of the TPC, and may include some data with particles crossing one drift volume to the next.  The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
 %The two beam entry angles and positions with respect to the LAr cryostat are shown in Figures \ref{fig:BP_SideView} and \ref{fig:BP_TopView}. 
 
 %\begin{figure}[h!]
