--- a/computing.tex
+++ b/computing.tex
@@ -84,7 +84,8 @@ Processed and Monte Carlo data placement will require additional resources that 
 Moving data to remote locations outside of CERN is subject to a number of requirements that include
 automation, monitoring and error checking and recovery. 
 
-A number of candidate systems satisfy these requirements. One for which we have sufficient expertise and experience is Spade, which was first used in IceCube~\cite{spade_icecube} and then enhanced and successfully utilized in the Daya Bay experiment~\cite{spade_dayabay}.
+A number of candidate systems satisfy these requirements and we would like to explore CERN based options and take advantage of 
+local know-how. An alternative for which we have expertise and experience is Spade, which was first used in IceCube~\cite{spade_icecube} and then enhanced and successfully utilized in the Daya Bay experiment~\cite{spade_dayabay}.
 
 
 \subsection{Databases}
