--- a/nuplatform.tex
+++ b/nuplatform.tex
@@ -35,7 +35,7 @@ The outer steel support structure for the cryostat will be prefabricated in piec
 
 The TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at one or more of the potential DUNE detector component production sites. Successively, components will be shipped to CERN for further testing and final assembly into the cryostat. This approach will begin the preparations for the various production sites for the first 10~kt module of the DUNE far detector.
 
-The interior of the cryostat will be prepared prior to the installation of the TPC.  Several I-beam support rails will be suspended below the top surface of the cryostat membrane by a series of hangers.  These hangers will be supported by an independent structure above the cryostat.  Decoupling the TPC support from the cryostat structure eliminates the movement of the TPC with the flexure of the cryostat structure from the filling and internal pressure changes of the Argon inside.  The hangers will pass through the top of the cryostat to the independent structure inside a bellows type feedthrough.  These feedthroughs need to be designed to minimize the heat flow into the cryogenic volume.  For the CPAs, the support rails and hangers need to be electrically isolated due to high voltage concerns.  To preserve the ability to reverse the order of the TPC components, all of the support points will be designed to the maximum set of requirements regarding loads and clearances.  
+The interior of the cryostat will be prepared prior to the installation of the TPC.  Several I-beam support rails will be suspended below the top surface of the cryostat membrane by a series of hangers.  These hangers will be supported by an independent structure above the cryostat.  Decoupling the TPC support from the cryostat structure eliminates the movement of the TPC with the flexure of the cryostat structure from the filling and internal pressure changes of the Argon inside.  The hangers will pass through the top of the cryostat to the independent structure inside a bellows type feedthrough.  These feedthroughs need to be designed to minimize the heat flow into the cryogenic volume.  For the CPAs, the support rails and hangers need to be electrically isolated due to high voltage concerns.  %To preserve the ability to reverse the order of the TPC components, all of the support points will be designed to the maximum set of requirements regarding loads and clearances.  
 
 There will be a series of feedthrough flanges located along each of the support rails.  These will be cryogenic flanges where the services for the TPC components can pass through the top of the cryostat.  It is foreseen that the CPA row will require one feedthrough for the high voltage probe to bring in the drift voltage.  The drift field is 500 V/cm.  For a drift distance of 3.6~m and 2.5~m, the probe voltages will be 180~kV and 125~kV, respectively.  There will be one service feedthrough for each of the APAs.  These feedthroughs will include high speed data connections, bias voltages for the wire planes, control and power for the cold electronics.  
 
