--- a/150603_organ.tex
+++ b/150603_organ.tex
@@ -14,7 +14,7 @@ the configuration of the first 10~kt detector module to be installed at the Sanf
 South Dakota during the early 2020s.  Successful construction and operation of the DUNE-PT will validate the design of this much 
 larger detector, and the accomplishment of these tasks is among the highest priorities for the DUNE Collaboration over the 
 timescale of the next few years.  Additionally, the subsequent collection and analysis of test beam data from the DUNE-PT will 
-provide vital calibration data necessary to achieve its scientific goals.
+provide vital calibration data necessary to achieve DUNE's scientific goals.
 
 In addition to taking responsibility for the construction and operation of the DUNE-PT, the DUNE collaboration strongly endorses 
 the already approved dual-phase liquid argon detector development program at CERN (WA105 experiment), recognizing the potential 
@@ -34,12 +34,12 @@ The international DUNE Project Office is overseen by the Technical Coordinator a
 of the different international partners contributing to the effort.  The Project Office maintains a schedule covering the entire 
 scope of the project (incorporating all of the individual work packages) and tracks progress through a detailed set of milestones 
 embedded within this schedule.  The schedule is based on a Work Breakdown Structure (WBS), which within its cascading levels 
-incorporates all required components of the detector construction projects.  The highest-level elements within this WBS structure 
+incorporates all required components of the detector construction projects.  The highest-level elements within this WBS 
 encompass multiple work packages assigned to different international partners.  The deliverables associated with individual work 
-packages become separated at lower levels within the WBS structure, where the contributions from specific partners are broken out 
+packages become separated at lower levels within the WBS, where the contributions from specific partners are broken out 
 as independent WBS elements.
 
-The DUNE Collaboration structure incorporates detector and prototyping organizations that mimic the WBS structure of the project.  
+The DUNE Collaboration structure incorporates detector and prototyping organizations that mimic the WBS of the project.  
 All matters related to the design, construction, installation, and commissioning of individual detector elements are discussed 
 within these organizations.  Because these organizations serve as the required interface between the DUNE Collaboration and the 
 international DUNE Project, they incorporate both a coordinator who reports to the DUNE Executive Committee through the Technical
@@ -157,11 +157,11 @@ Fermilab, which will start taking cosmic ray data in the fall of 2015.
 
 \subsection{Institutional Responsibilities}
 
-The deliverables required to construct and operate the DUNE-PT are summarized in table~\ref{tab:wbs-detector}.  DUNE is a new collaboration 
+The deliverables required to construct and operate the DUNE-PT are summarized in Table~\ref{tab:wbs-detector}.  DUNE is a new collaboration 
 recently organized to incorporate former members of the LBNE and LBNO collaborations and other interested members into a unified 
 effort to perform the best possible measurements of neutrino oscillations, proton decay, and supernova neutrinos using large-scale, 
 deep-undergound liquid argon detectors.  Institutional responsibilities for specific detector construction activities are still 
-under development.  In table~\ref{tab:wbs-detector}, DUNE institutions expected to contribute to the production of specific detector elements 
+under development.  In Table~\ref{tab:wbs-detector}, DUNE institutions expected to contribute to the production of specific detector elements 
 needed for the DUNE-PT are listed. 
 %
 \begin{table}[h]
@@ -200,7 +200,7 @@ will be expected to push the effort forward during this transition period to ens
 proposed schedule for having detectors installed at CERN in early 2018.
 
 Although the construction, installation, and operation of the DUNE-PT will be the responsibility of the DUNE collaboration, we do 
-ask for support from the CERN neutrino platform in the form of detector infrastructure as summarized in table~\ref{tab:wbs-infra}.  
+ask for support from the CERN neutrino platform in the form of detector infrastructure as summarized in Table~\ref{tab:wbs-infra}.  
 %
 \begin{table}[h]
 \centering
@@ -241,16 +241,16 @@ Mike Andrews (Fermilab).
 
 \subsection{Cost estimate and funding sources}
 Cost estimates in {\bf core}  accounting of the various detector components and infrastructure items that 
-will be provided for the DUNE-PT by the particpating members of the DUNE collaboartion are shown in 
-table~\ref{tab:cost}.  Core M\&S cost estimates do include the cost of the labor hours required to 
-assemble and install the various detector components, which are separately provided.  Costing of the 
+will be provided for the DUNE-PT by the participating members of the DUNE collaboration are shown in 
+Table~\ref{tab:cost}.  Core M\&S cost estimates do include the cost of the labor hours required to 
+assemble and install the various detector components.  Costing of the 
 various detector components is informed by the previously mentioned construction activities associated 
 with building prototype detectors for the 35~t cryostat at Fermilab.
 
 Financial support for the construction and installation of the DUNE-PT will be obtained through the 
 funding agencies of the various institutions involved in the effort.  Current funding available for 
 the effort is via the DUNE US project supported by the United States Department of Energy (DOE).  It 
-is expected that additional funding sources associated with non-DOE insitutions will be obtained for 
+is expected that additional funding sources associated with non-DOE institutions will be obtained for 
 this effort within the next year.  However, even if this does not occur, the funding profile for the 
 DUNE US project over the next three years is by itself sufficient for supporting DUNE responsibilities 
 to the DUNE-PT, which the collaboration is supporting as its highest priority activity during this 
