--- a/bibliography.tex
+++ b/bibliography.tex
@@ -12,6 +12,13 @@
 
 \bibitem{eoi} "Expression of Interest for a Full-Scale Detector Engineering Test and Test Beam Calibration of a Single-Phase LAr TPC" M.A. Leigui de Oliveira et al, SPSC-EOI-011, \url{http://cds.cern.ch/record/1953730/files/SPSC-EOI-011.pdf?version=1}
 
+\bibitem{montanari_35ton} First scientific application of the membrane cryostat technology, D.Montanari et al, \textit{AIP Proceedings 1573, 1664 (2014)} \url{http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4860907}
+
+% Add if doc can be made public in docdb -- AH 
+ \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25-ICMC 2014, LBNE Docid 9270} 
+
+\bibitem{WA105} I. De Bonis et al. (The LBNO-DEMO (WA105) Collaboration), Technical Design Report for large-scale neutrino detectors prototyping and phased performance assessment in view of a long-baseline oscillation experiment, CERN-SPSC-TDR-004, arXiv:1409.4405 (2014)
+
 \bibitem{CRubbia}"The Liquid-argon time projection chamber: a new concept for Neutrino Detector", C. Rubbia, CERN-EP/77-08 (1977).
 
 \bibitem{icarus_mainref} "Design, construction and tests of the ICARUS T600 detector", ICARUS Collaboration, Nucl. Inst. Meth., A527 (2004) 329-410. 
@@ -21,6 +28,10 @@
 \bibitem{argoneut1} "First Measurements of Inclusive Muon Neutrino Charged Current Differential Cross Sections on Argon." C. Anderson et al, Physical Review Letters (PRL) 108 (2012), 161802. 
 
 \bibitem{argoneut2} "The ArgoNeuT Detector in the NuMI Low-Energy beam line at Fermilab" C. Anderson et al, Journal of Instrumentation (JINST), 2012 JINST Vol. 7 P10019. 
+
+\bibitem{LArIAT} \url{http://intensityfrontier.fnal.gov/lariat.html}
+
+\bibitem{captain} H. Berns et al. [The CAPTAIN Collaboration], arXiv:1309.1740 [physics.ins-det].
 
 \bibitem{fluka05} "FLUKA: a multi-particle transport code" A. Ferrari, P.R. Sala, A. Fasso`, and J. Ranft, CERN-2005-10 (2005), INFN/TC\_05/11, SLAC-R-773.
 
@@ -55,7 +66,7 @@ detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013
 
 \bibitem{argoneut_eg} "Results from and Status of ArgoNeuT and MicroBooNE" A. Szelc., XXVI International Conference on Neutrino Physics and Astrophysics (\url{http://neutrino2014.bu.edu/}).
 
-\bibitem{stopmu} LBNE docdb~\#9079, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=9079}
+\bibitem{stopmu} LBNE docdb~\#9079, \url{http://lbne2-docdb.fnal.gov/cgi-bin/ShowDocument?docid=9079}
 
 \bibitem{bueno} "Nucleon Decay Searches with large Liquid Argon TPC Detectors at Shallow Depths: atmospheric neutrinos and cosmogenic backgrounds", A.Bueno, Z.Dai, Y.Ge, M.Laffranchi, A.J.Melgarejo, A.Meregaglia, S.Navas, A.Rubbia, JHEP 0704:041, (2007).
 
@@ -67,9 +78,11 @@ detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013
   %
 \bibitem{mat-test-stand} "A system to test the effects of materials on the electron drift lifetime in liquid argon and observations on the effect of water", R. Andrews, et al., Nucl. Instrum. Meth. A608 (2009) 251-258
 
-\bibitem{spacecharge} LBNE docdb~\#6471, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6471}
+\bibitem{LBNE-design} LBNF/DUNE Conceptual Design Report Annex 4A: The LBNE Design for a Deep Underground Single-Phase Liquid Argon TPC," LBNE-doc-10685 \url{http://lbne2-docdb.fnal.gov/cgi-bin/ShowDocument?docid=10685}
 
-\bibitem{CFD} LBNE docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
+\bibitem{spacecharge} LBNE docdb~\#6471, \url{http://lbne2-docdb.fnal.gov/cgi-bin/ShowDocument?docid=6471}
+
+\bibitem{CFD} LBNE docdb~\#6140, \url{http://lbne2-docdb.fnal.gov/cgi-bin/ShowDocument?docid=6140}
 
   %
   %cites from singlephasedet input: photondetector
@@ -81,7 +94,6 @@ detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013
 
 \bibitem{absorption} B. Jones et al., arXiv: 1306.4605
 
-\bibitem{CFD} LBNE docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
 
 \bibitem{rayleigh} E. Grace, J. Nikkel,  arXiv: 1502.04213
 
@@ -102,15 +114,12 @@ detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013
 %cites from cryo
 %
 
-%\bibitem{montanari_35ton} First scientific application of the membrane cryostat technology, D.Montanari et al, \textit{AIP Proceedings 1573, 1664 (2014)} \url{http://scitation.aip.org/content/aip/proceeding/aipcp/10.1063/1.4860907}
-
-% Add if doc can be made public in docdb -- AH 
-% \bibitem{montanari_35ton_perf} Performance And Results of the LBNE 35 ton Membrane Cryostat Prototype
-% \textit{D.Montanari et al, 25th International Cryogenic Engineering Conference and the International Cryogenic Materials Conference in 2014, ICEC 25-ICMC 2014, LBNE Docid 9270} 
+\bibitem{sbnd} \url{http://sbn-nd.fnal.gov/}
 
 % \bibitem{acciarri_sbn_proposal} A Proposal for a Three Detector Short-Baseline Neutrino Oscillation Program in the Fermilab Booster Neutrino Beam \textit{R.Acciarri et al} \url{http://arxiv.org/abs/1503.01520}
 
-\bibitem{outgassing} Outgassing reference based on Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD)
+\bibitem{outgassing} R. Rebel et al., Journal of Physics: Conference Series {\bf 308} (2011) 012023; doi:10.1088/1742-6596/308/1/012023
+%Outgassing reference based on Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD)
 
 %
 %cites from calibration
@@ -138,7 +147,7 @@ detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013
 %
 %cites from organ
 %
-\bibitem{LBNEorg} LBNE doc-db~\#6547; \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6547}
+\bibitem{LBNEorg} LBNE doc-db~\#6547; \url{http://lbne2-docdb.fnal.gov/cgi-bin/ShowDocument?docid=6547}
 
 %
 %cites from summary
