--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -126,7 +126,7 @@ The cryostat would have to be emptied and the planes shifted to the 2.5~m drift 
 \subsubsection{TPC and PDS readout}
 \input{readout}
 
-\subsubsection{DAQ, Slow control and monitoring}
+\subsubsection{DAQ, slow control and monitoring}
 \input{daq}
 
 
