--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -219,7 +219,7 @@ e$^+$ or e$^-$       &    0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 7        &    10k   & 
 %e$^+$ or e$^-$   (w/rad) &  3  &  20K  & tagged photons \\ \hline
 $\mu^-$  &   (0.2), 0.5, 1, 2  &  10k & $E_\mu$, charge sign \\ \hline
 $\mu^+$ &   (0.2), 0.5, 1, 2   &  10k & $E_\mu$, Michel el.,charge sign  \\ \hline
-$\mu^-$ or $\mu^+$ &   3, 5, 7  &  5k & $E_\mu$ MCS \\ \hline
+$\mu^-$ or $\mu^+$ &   3, 5, 7  &  5k & $E_\mu$ \\ \hline
 %$\mu^-$ or $\mu^+$  &  1 \& 2  &  5K  & vary angle ($\times$5), reco \\ \hline
 %proton &  1 \& 2 &  10K & vary angle ($\times$5), reco \\ \hline
 anti-proton &  low-energy tune  &  (100) & anti-proton stars \\ \hline
@@ -663,7 +663,7 @@ $K^+$ PID and detection efficiency.
 
 Obtaining low energy kaons will likely be difficult in this beamline.
 A sample of 13k beam kaons with 1~GeV/c momentum are requested to provide 2k stopping $K^+$ track samples for PID studies.
-(only 15\% of $K^+$ stop at 1~GeV/c).
+(85\% of $K^+$ interact at 1~GeV/c).
 
 
 %\begin{table}[h]
