--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -27,7 +27,7 @@
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{authblk}
+\usepackage[blocks,affil-it]{authblk}
 
 \RequirePackage{lineno}
 
@@ -40,15 +40,16 @@
 \setcounter{tocdepth}{2}
 
 
+
 \begin{document}
-\linenumbers
+%\linenumbers
 
 %\title{  Proposal for a Engineering Test and Beam Calibration of a Full-Scale Single-Phase Liquid Argon Time Projection Chamber}
-\title{Proposal for a Full-Scale Single-Phase Liquid Argon Time Projection Chamber and Detector Beam Test at CERN}
+\title{Proposal for a Full-Scale Prototype Single-Phase Liquid Argon Time Projection Chamber and Detector Beam Test at CERN}
 
 \date{\today}
 %\date{April 15, 2015}
-	\input{150602_authors}
+	\input{150606_authors}
 %	\input{authors_template}
 
 \maketitle
