--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -662,8 +662,8 @@ appropriate momentum range (500-800 MeV/c). The kaon samples requested in Table~
 $K^+$ PID and detection efficiency. 
 
 Obtaining low energy kaons will likely be difficult in this beamline.
-A sample of 13k beam kaons with 1~GeV/c momentum are requested to provide 2k stopping $K^+$ track samples for PID studies.
-(85\% of $K^+$ interact at 1~GeV/c).
+A sample of 13k beam kaons with 1~GeV/c momentum are requested to provide 2k stopping $K^+$ track samples for PID studies (only 15\% of $K^+$ stop at 1~GeV/c).
+%(85\% of $K^+$ interact at 1~GeV/c).
 
 
 %\begin{table}[h]
